# bluepill-base

./: CMakeLists.txt  README.md  arm-toolchain.cmake  startup.s  stm32f.ld
include/: stm32f10x.h
src/: main.c  system_stm32f10x.c
